--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-    "name": "social-networking-platform",
-    "version": "1.0.0",
-    "description": "A LinkedIn-style social networking platform.",
-    "main": "index.html",
-    "scripts": {
-      "start": "http-server -p $PORT"
-    },
-    "dependencies": {
-      "http-server": "^0.12.3"
-    },
-    "engines": {
-      "node": ">=14.0.0"
-    }
+  "name": "social-networking-platform",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "http-server public -p $PORT"
+  },
+  "dependencies": {
+    "http-server": "^0.12.3"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
+}
+
   
